tdf#148707 implicit moveTo on all not only on first

The current solution checks implicit moveTo only on the first arc in
a sequence of arcs. The patch moves it into the loop, so that the
implicit moveTo is done for each command in a sequence.

Change-Id: I400fa8fc96d7377ede55296c71e7a82ce891cc24
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133896
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>